🚑 Fix: Styles not showing in rooms

--- a/NextJS Proyect/src/app/[rooms]/main.css
+++ b/NextJS Proyect/src/app/[rooms]/main.css
@@ -58,14 +58,14 @@
     border: 1px bold lawngreen;
     width: 75px;
     height: 75px;
-    background-image: url("mic-logo.svg");
+    background-image: url("./assets/mic-logo.svg");
 }
 
 .controler_closed{
     background-color:#976ccc;
     width: 75px;
     height: 75px;
-    background-image: url("mic-logo-off.svg");
+    background-image: url("./assets/mic-logo-off.svg");
 }
 .controler_waiting{
     border-radius: 75px;
@@ -74,7 +74,7 @@
     border-color: rgb(252, 245, 188);
     width: 75px;
     height: 75px;
-    background-image: url("mic-logo-off.svg");
+    background-image: url("./assets/mic-logo-off.svg");
 
 }
 .UsersDisplay{
@@ -95,7 +95,7 @@
     width: 60vw;
     background-color: rgba(21, 21, 21, 0.8);
     height: 70vh;
-    background: URL('ICONO.png');
+    background: URL('./assets/ICONO.png');
     background-repeat: no-repeat;
     background-position: center;
     margin-right: 0;
